[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Hack_Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/control_notes.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/panel_grey.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=25]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.454902, 0.435294, 0.435294, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 3

[node name="ControlNotes" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ControlTab" type="NinePatchRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1624.0
margin_top = 936.0
margin_right = 1864.0
margin_bottom = 1024.0
texture = ExtResource( 3 )
region_rect = Rect2( 4, 5, 96, 94 )
patch_margin_left = 10
patch_margin_top = 6
patch_margin_right = 12
patch_margin_bottom = 5

[node name="Panel2" type="NinePatchRect" parent="ControlTab"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -25.0
margin_right = -32.0
margin_bottom = 23.0
texture = ExtResource( 3 )
region_rect = Rect2( 5, 5, 94, 95 )
patch_margin_left = 11
patch_margin_top = 10
patch_margin_right = 13
patch_margin_bottom = 10

[node name="Label" type="Label" parent="ControlTab/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Tab"

[node name="Label" type="Label" parent="ControlTab"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -21.0
margin_right = -17.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Controlls"
align = 1
valign = 1

[node name="Control" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1496.0
margin_top = 632.0
margin_right = 1864.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 23 )

[node name="Panel2" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 140.0
margin_right = -48.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "ESC"

[node name="Label" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -216.0
margin_top = 148.0
margin_right = -8.0
margin_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Menu"
align = 1

[node name="Panel3" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 76.0
margin_right = -48.0
margin_bottom = 116.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "E"
align = 1

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 84.0
margin_right = 176.0
margin_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Interaction"
align = 1

[node name="Panel4" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 12.0
margin_right = -48.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "I"
align = 1

[node name="Label3" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 20.0
margin_right = 176.0
margin_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Inventory"
align = 1

[node name="Panel5" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -52.0
margin_right = -48.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Shift"

[node name="Label4" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -60.0
margin_right = -8.0
margin_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Rennen
Split Items"
align = 1

[node name="Panel6" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -116.0
margin_right = -48.0
margin_bottom = -76.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Maustaste"
align = 1

[node name="Label5" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -108.0
margin_right = 176.0
margin_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Attack"
align = 1

[node name="Panel7" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -180.0
margin_right = -48.0
margin_bottom = -140.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Control/Panel7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -14.5
margin_right = 21.0
margin_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "W,A,S,D"
align = 1

[node name="Label6" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -172.0
margin_right = 176.0
margin_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Movement"
align = 1
